feat: changes in services and controllers
